--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,7 @@ Global Styles
   box-sizing: border-box;
 }
 body {
-  font-family: var(--ff-secondary);
+  font-family: Arial, Helvetica, sans-serif;
   background: var(--clr-grey-10);
   color: var(--clr-grey-1);
   line-height: 1.5;
@@ -87,7 +87,7 @@ h4 {
   text-transform: capitalize;
   line-height: 1.25;
   margin-bottom: 0.75rem;
-  font-family: var(--ff-primary);
+  font-family: Arial, Helvetica, sans-serif;
 }
 h1 {
   font-size: 3rem;
@@ -191,12 +191,13 @@ nav {
   letter-spacing: var(--spacing);
   display: block;
   padding: 0.5rem 1rem;
-  transition: var(--transition);
+  /* transition: var(--transition); */
 }
 .links a:hover {
   background: var(--clr-primary-8);
   color: var(--clr-primary-5);
   padding-left: 1.5rem;
+  border-bottom: solid 2px var(--clr-primary-5);
 }
 .social-icons {
   display: none;
@@ -240,11 +241,12 @@ nav {
     display: flex;
   }
   .social-icons a {
+    font-size: 1.5rem;
     margin: 0 0.5rem;
     color: var(--clr-primary-5);
     transition: var(--transition);
   }
   .social-icons a:hover {
-    color: var(--clr-primary-7);
+    color: var(--clr-primary-2);
   }
 }
